--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,12 @@ input[type="text"] {
   box-sizing: border-box;
 }
 
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
 .tab-button {
   padding: 0.5rem 1.2rem;
   border-radius: 20px;
@@ -130,9 +136,9 @@ input[type="text"] {
 }
 
 .generations {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  overflow-x: auto;
   gap: 10px;
   margin-bottom: 1rem;
   background-color: #333;
@@ -359,6 +365,11 @@ input[type="text"] {
   width: 100%;
   overflow-x: auto;
   padding-bottom: 1rem;
+  justify-content: center; /* 기본은 가운데 정렬 */
+}
+
+.evolution-chain.overflowing {
+  justify-content: flex-start;
 }
 
 .evo-step {
